@@ -2442,4 +2442,5 @@
 	  console (only a Telnet console) and SDIO is enabled.  This configuration is
 	  required because the STM3240G-EVAL board cannot simultaneously support
 	  RS-232 and SDIO due to pin conflicts.
+	* lib/string/strcasestr.c:  Add strcasestr().
 
